--- a/product.html
+++ b/product.html
@@ -43,7 +43,7 @@
 		<div class="container">
 			<main class="grid">
 				<article>
-					<img src="produk1.png">
+					<img src="../sinorex/produk1.png">
 					<div class="konten" id="namaproduk">
 						<h2>Tanmol</h2>
 						<p>Tablet Paracetamol</p>
